# gitloco

./: .gitignore  README.md  build.sh  run.sh  test.sh
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/src/gitloco/: app.py  attribution.py  cli.py  compare.py  config.py  db.py  diff.py  doctor.py  file_history.py  mcp_server.py  models.py  persistence.py  repo.py  schemas.py  snapshots.py
backend/src/gitloco/routers/: commits.py  files.py  threads.py
backend/src/gitloco/templates/: claude_md_section.md  gitloco_command.md
backend/tests/: conftest.py  test_commits_and_diff.py  test_display_path.py  test_doctor.py  test_migration.py  test_rebase_attribution.py  test_threads_api.py  test_version_concurrency.py  test_version_rollback.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: check-font.mjs  check-lang.mjs  find-chrome.mjs  inspect-tokens.mjs  take-shots.mjs  test-refractor.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CommitDiff.tsx  CommitList.tsx  DetachedThreads.tsx  FileDiff.tsx  Markdown.tsx  NewThreadComposer.tsx  OrphanThreads.tsx  ThreadMinimap.tsx  ThreadView.tsx  VersionPicker.tsx
frontend/src/components/__tests__/: VersionPicker.test.ts
frontend/src/styles/: diff.css
frontend/src/utils/: detachedThreads.ts  language.ts  theme.ts  useScrollRestoration.ts
frontend/src/utils/__tests__/: detachedThreads.test.ts  language.test.ts
scripts/: migrate_old_db.py
