[project]
name = "gitloco"
version = "0.1.0"
description = "Local code-review tool for AI-generated git changes"
authors = [
    { name = "rokuz", email = "5437220+rokuz@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pygit2>=1.16",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "mcp>=1.0",
    "click>=8.1",
    "pydantic-settings>=2.6",
    "setproctitle>=1.3",
]

[project.scripts]
gitloco = "gitloco.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
